--- a/style.css
+++ b/style.css
@@ -1,6 +1,12 @@
 @import 'basscss';
 @import 'basscss-btn-sizes';
 
+html, body, #main {
+    height: 100vh;
+    width: 100vw;
+    overflow: none;
+}
+
 .bg-main {
     background-color: #F5F1E8;
 }
